dark mode fixed

--- a/CLIENT/src/index.css
+++ b/CLIENT/src/index.css
@@ -66,3 +66,10 @@ button:focus-visible {
         background-color: #FDF0D5;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        color: #FDF0D5;
+        background-color: #02020B;
+    }
+}
